# customer-support-agent

./: .env.example  .gitignore  README.md  customer.yearn3.xyz.nginx.conf  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/agent/: engine.py
app/api/: routes.py
app/repositories/: __init__.py  support_repository.py
app/schemas/: __init__.py  types.py
app/services/: faq_service.py  support_service.py  tool_service.py
docs/assets/docs-src/: agent-decision-flow.json  api-example-flow.json  business-flow.json  dashboard-preview.json  database-schema.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
seed/: faq.json
tests/: conftest.py  test_agent.py  test_api.py
